--- a/public/assets/css/components/structure.css
+++ b/public/assets/css/components/structure.css
@@ -442,7 +442,7 @@ body {
 }
 
 .pageheader {
-    padding: 0px 15px;
+    padding: 0px 20px;
     padding-bottom:150px;
     height:60px;
     line-height:60px;
